--- a/pages/p2/1016282.md
+++ b/pages/p2/1016282.md
@@ -45,6 +45,21 @@
    </span>
   </span>
  </p>
+ 
+#### [ 🎬  《红墙的记忆》- 4.25中南海万人和平上访纪实 ](http://95.179.228.154:10000/videos/legend/?378838)
+
+#### [ 🎬 《伪火》- 天安门自焚真相](http://95.179.228.154:10000/videos/blog/?378838)&nbsp; | &nbsp;[《六月黑夜》- 六四天安门大屠杀](http://95.179.228.154:10000/videos/88/?378838)
+
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理 ...）](http://95.179.228.154:81/youtube.html?378838) &nbsp;|&nbsp; [新项目地址（请收藏）](https://github.com/easy2view/epoch-news/?378838)
+
+#### [ 🔥  《九评共产党》之五 - 评江泽民与中共相互利用迫害法轮功](http://95.179.228.154:10000/videos/res/jiuping/?378838)
+
+#### [ 🔥  《大裤衩》第一集 - 揭秘央视电视台《焦点追踪》节目组的幕后故事](http://95.179.228.154:10000/videos/res/big-shorts/index.html?378838)
+
+#### [ 🔥  BBC新疆调查：中国棉花行业背后的维吾尔人强迫劳动](http://95.179.228.154:10000/videos/res/LabourCamp/?378838)
+
+
+ 
  <h2>
   <strong>
    北部战区司令员王强晋升上将 李桥铭被撤下
@@ -70,6 +85,9 @@
  <p>
   随着王强以新身份公开亮相，这也意味着李桥铭正式卸任北部战区司令员。还远未到65岁的退役年龄的李桥铭目前去向不明。
  </p>
+ 
+ 
+
  <p>
   李桥铭于1961年4月生，河南人，2007年5月，任陆军第四十二集团军第一二四师师长。2010年4月，任陆军第四十一集团军参谋长。2013年7月任陆军第四十一集团军军长。2016年1月任北部战区副司令员兼北部战区陆军司令员。2017年8月升任北部战区司令员。他是中共十九届中央委员。直到此番卸任
  </p>
