--- a/pages/nsc412/n13824318.md
+++ b/pages/nsc412/n13824318.md
@@ -82,6 +82,45 @@
  以下是开票实时更新：
 </p>
 <h3>
+ 拜登飞往特拉华州参加初选投票
+</h3>
+<p>
+ 美国总统拜登周二前往家乡特拉华州参加中期选举初选投票，但他在出发前没有透露原因。
+</p>
+<p>
+ 据
+ <span style="font-weight: 400;">
+  哥伦比亚广播公司新闻
+ </span>
+ （CBS News）记者史蒂文‧波特诺伊（Steven Portnoy）报导，当被美国广播公司新闻（ABC News）记者问及为什么没有选择缺席投票时，拜登“微笑着转身登上空军一号”。
+</p>
+<h3>
+ CNN预测：民主党人马托斯将在罗德岛州副州长竞选中对阵共和党人古基安
+</h3>
+<p>
+ 据美国有线电视新闻网（CNN）预测，在11月的罗德岛州副州长竞选中，将由现任民主党副州长萨宾娜‧马托斯（Sabina Matos）与共和党候选人亚伦‧古基安（Aaron Guckian）对决。
+</p>
+<p>
+ 马托斯正在寻求一个完整的任期。
+</p>
+<h3>
+ CNN预测：众议员帕帕斯赢得新罕布什尔州第一国会选区民主党初选
+</h3>
+<figure aria-describedby="caption-attachment-13824497" class="wp-caption aligncenter" id="attachment_13824497" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2022/09/id13824497-GettyImages-1243099970.jpg" target="_blank">
+  <img alt="" class="size-large wp-image-13824497" src="https://i.epochtimes.com/assets/uploads/2022/09/id13824497-GettyImages-1243099970-600x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text" id="caption-attachment-13824497">
+  2022年9月10日，在新罕布什尔州多佛市（Dover），正在竞选连任的民主党参议员玛吉‧哈桑（Maggie Hassan）和民主党众议员克里斯‧帕帕斯（Chris Pappas）共同出席了一次竞选活动。(Scott Eisen/Getty Images)
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 据CNN预测，现任众议员克里斯‧帕帕斯（Chris Pappas）将赢得新罕布什尔州第一国会选区的民主党提名。
+</p>
+<p>
+ 帕帕斯被视为实力最弱的众议院民主党人之一，他持有的席位是共和党在今年中期选举中要翻转的目标之一。
+</p>
+<h3>
  CNN预测：卡卢斯赢得罗德岛州共和党州长初选
 </h3>
 <p>
@@ -94,7 +133,10 @@
  CNN预测：马加津纳将赢得罗德岛第二国会选区民主党提名
 </h3>
 <p>
- 据CNN预测，州财政局长塞思‧马加津纳（Seth Magaziner）将赢得罗德岛州第二国会选区的民主党提名。他将在11月面对华裔共和党候选人冯伟杰（Allan Fung）。
+ 据CNN预测，州财政局长塞思‧马加津纳（Seth Magaziner）将赢得罗德岛州第二国会选区的民主党提名。
+</p>
+<p>
+ 他将在11月对阵华裔共和党候选人冯伟杰（Allan Fung）。冯伟杰在周二的初选中没有对手。
 </p>
 <p>
  他们竞争的是即将退休的民主党众议员吉姆‧郎之万（Jim Langevin）空出的席位。
@@ -161,6 +203,8 @@
 <p>
  责任编辑：林妍
 </p>
+<div id="gtx-trans" style="position: absolute; left: 385px; top: 808.831px;">
+</div>
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
