--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -26,8 +26,8 @@
 #### [ 贵阳要出大事？部队进驻维稳 当局封杀言论](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/653609.md)
 #### [ 【横河观点】俄军几乎兵败如山倒 习普会怎收场](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13823556.md)
 #### [ 李克强最后一次洗牌 中共国务院将“改朝换代”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999292.md)
-#### [ 胡耀邦长子批闭关锁国论 红二代冲突受瞩](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13823279.md)
 #### [ 红二代卷入高层内斗？党媒喊改革决定中国命运](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103526695.md)
+#### [ 胡耀邦长子批闭关锁国论 红二代冲突受瞩](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13823279.md)
 #### [ 栗战书访俄 中俄声明两大关键问题大不同](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13823387.md)
 #### [ 俄罗斯官方：栗战书承诺协助攻打乌克兰](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103526277.md)
 #### [ 央视中秋晚会 济宁求救刷屏](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/653525.md)
@@ -46,8 +46,8 @@
 #### [ 俄军乌东溃败 金灿荣预测再遭打脸 网友调侃](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13823351.md)
 #### [ 【中国观察】内外放风 二十大后走向朝鲜化？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13823116.md)
 #### [ 中共官方透露一信息 习将终身执政？历史学家预言将会兑现？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/653198.md)
+#### [ 习近平借政治局出杀招保连任？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/653624.md)
 #### [ 传广西东兴封城9个月 20万人剩3万 方舱“简直是地狱”(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1016599.md)
 #### [ 二十大前官场大洗牌 传李强进京 陈敏尔将接任上海市委书记(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999289.md)
 #### [ 【新闻大家谈】俄大败中共惊心 李易峰替谁挡刀](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13823281.md)
 #### [ 清洗江泽民堂妹的势力？福建高官陈家东落马(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999093.md)
-#### [ 分析：清零已成为一场中共荒唐政治秀](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13821954.md)
