--- a/pages/nf4514/n13824318.md
+++ b/pages/nf4514/n13824318.md
@@ -82,6 +82,21 @@
  以下是开票实时更新：
 </p>
 <h3>
+ CNN预测：川普前幕僚卡罗琳·莱维特将获共和党提名
+</h3>
+<p>
+ CNN预测，前白宫助理新闻发言人卡罗琳‧莱维特（Karoline Leavitt）将赢得新罕布什尔州第一国会选区的共和党提名，并在11月面对民主党现任众议员克里斯‧帕帕斯（Chris Pappas）。
+</p>
+<p>
+ 这位Z世代的候选人，于2019年毕业于圣安塞姆学院（Saint Anselm College），然后成为川普总统的幕僚。她最终成为白宫新闻秘书凯莉·麦肯纳尼（Kayleigh McEnany）手下的助理新闻秘书。
+</p>
+<p>
+ 拜登上任后，她去为众议员埃莉斯‧斯特法尼克（Elise Stefanik）工作。她得到了德州参议员特德·克鲁兹（Ted Cruz）的支持。她之前表示，参选的部分原因是为了让年轻选民支持共和党。
+</p>
+<p>
+ 一些民主党人认为，年轻的莱维特打败了前国务院官员马特‧莫厄尔斯（Matt Mowers）可能对帕帕斯有利。
+</p>
+<h3>
  CNN预测：现任州长麦基将赢得罗德岛州民主党州长提名
 </h3>
 <p>
