--- a/pages/nsc412/n13824318.md
+++ b/pages/nsc412/n13824318.md
@@ -82,7 +82,19 @@
  以下是开票实时更新：
 </p>
 <h3>
- CNN预测：川普前幕僚卡罗琳·莱维特将获共和党提名
+ 博尔达克有望获新罕布什尔州共和党参院提名
+</h3>
+<p>
+ 截至美东时间凌晨3:50，新罕布什尔州参议员共和党初选的开票率达84%，但选战仍胜负难料。
+</p>
+<p>
+ 退役陆军将军唐·博尔达克（Don Bolduc）以36.8%的得票率，暂时领先查克‧莫尔斯（Chuck Morse）的35.4 %。部分媒体已大胆预测，博尔达克有望击败他的挑战者，晋级该州11月的大选，并与现任民主党参议员玛吉‧哈桑（Maggie Hassan）对决。
+</p>
+<p>
+ 博尔达克告诉福克斯新闻，随着初选结果的公布，他感觉“真的很棒”。他表示，随着农村地区开票结果出来，他相信差距会拉大，他有信心自己会获胜。
+</p>
+<h3>
+ CNN预测：川普前幕僚莱维特将获共和党众院提名
 </h3>
 <p>
  CNN预测，前白宫助理新闻发言人卡罗琳‧莱维特（Karoline Leavitt）将赢得新罕布什尔州第一国会选区的共和党提名，并在11月面对民主党现任众议员克里斯‧帕帕斯（Chris Pappas）。
