--- a/pages/nsc412/n13824318.md
+++ b/pages/nsc412/n13824318.md
@@ -82,6 +82,18 @@
  以下是开票实时更新：
 </p>
 <h3>
+ 莫尔斯承认败选 博尔达克11月将对决哈桑
+</h3>
+<p>
+ 尽管开票结果尚未完全结束，但新罕布什尔州参议员共和党候选人莫尔斯（Chuck Morse）并已承认败选，并致电博尔达克（Don Bolduc），祝他顺利在今秋击败玛吉·哈桑。
+</p>
+<p>
+ 莫尔斯在推特上写道：“这是一个漫长的夜晚，我们落败了。我想感谢我的支持者，他们为这个团队的努力付出了所有的血汗、泪水。我刚刚致电给唐·博尔达克将军，并祝愿他一切顺利。今年秋天的重点需要放在击败玛吉·哈桑上。”
+</p>
+<p>
+ 这场异常接近的共和党初选，被认为是对共和党的测试。博尔达克立场与支持川普的派系保持一致，尽管前总统川普并未直接支持他。莫尔斯则被视为是立场更温和的保守派。
+</p>
+<h3>
  博尔达克有望获新罕布什尔州共和党参院提名
 </h3>
 <p>
