--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -29,8 +29,8 @@
 #### [ 北京气氛不对劲 习近平或正坐在火山口](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/653201.md)
 #### [ 习近平龙脉被挖断！就在几天前！内藏惊人数字！(视频)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/998941.md)
 #### [ 习近平借政治局出杀招保连任？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/653624.md)
-#### [ 【横河观点】俄军几乎兵败如山倒 习普会怎收场](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13823556.md)
 #### [ 央视中秋晚会 济宁求救刷屏](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/653525.md)
+#### [ 【横河观点】俄军几乎兵败如山倒 习普会怎收场](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13823556.md)
 #### [ 江峰: 李易峰被拘 北部战区诡变 因需出事反常有妖](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/653675.md)
 #### [ 红二代卷入高层内斗？党媒喊改革决定中国命运](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103526695.md)
 #### [ 栗战书访俄 中俄声明两大关键问题大不同](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13823387.md)
@@ -50,4 +50,4 @@
 #### [ 基建狂魔已玩完 中国高铁成最大灰犀牛！(视频)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999527.md)
 #### [ 疫情爆发 北京或上演终极封城](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/653285.md)
 #### [ 聚焦中俄关系 习近平普京中亚行各怀何心思](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13823571.md)
-#### [ 【秦鹏直播】一路狂奔 习近平接普京指挥棒？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13824416.md)
+#### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
