--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -6,8 +6,8 @@
 #### [ 俄军大溃败之际 习近平会见普京难掩尴尬(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016481.md)
 #### [ 新发言人毛宁记者会竟无人提问 网群嘲(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016487.md)
 #### [ 二十大前习近平加紧清洗政法系 震慑政敌(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016441.md)
-#### [ 二十大高层角力：汪洋女儿受聘美投行细节曝光(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016432.md)
 #### [ 李强、李鸿忠罕见缺席二十大前重要会议 前景不明(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016646.md)
+#### [ 二十大高层角力：汪洋女儿受聘美投行细节曝光(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016432.md)
 #### [ 习近平对军队不放心 二十大新军委谁上谁下？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016649.md)
 #### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
 #### [ 亏空300亿公款 人寿保险前党委书记王滨被捕(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016595.md)
@@ -43,11 +43,11 @@
 #### [ 二十大前官场大洗牌 传李强进京 陈敏尔将接任上海市委书记(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999289.md)
 #### [ 汪洋接班李克强？台湾学者揭玄机](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103526656.md)
 #### [ 【热门话题】红二代卷入高层内斗？/李易峰替谁挡刀](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103526666.md)
+#### [ 习近平抵达哈萨克斯坦 中亚之行要做三件事(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016677.md)
 #### [ 专家：当公安无薪可领 中国进入后中共时代](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13822545.md)
+#### [ 二十大前的政治猫腻？ 李易峰被抓疑涉深层内幕](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103527703.md)
 #### [ 李易峰事件 被制造出的舆论高峰？转移什么视线？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103526509.md)
 #### [ 清洗江泽民堂妹的势力？福建高官陈家东落马(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999093.md)
 #### [ 中共国开行摸底高管兴趣爱好 引热议](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13822898.md)
 #### [ 基建狂魔已玩完 中国高铁成最大灰犀牛！(视频)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999527.md)
 #### [ 疫情爆发 北京或上演终极封城](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/653285.md)
-#### [ 二十大前的政治猫腻？ 李易峰被抓疑涉深层内幕](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103527703.md)
-#### [ 聚焦中俄关系 习近平普京中亚行各怀何心思](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13823571.md)
