同步于: 9月15日1时51分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -1,53 +1,53 @@
 #### [法轮功真相](https://github.com/gfw-breaker/truth/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧二十周年报告](https://github.com/gfw-breaker/mh-reports/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp;[明慧期刊](https://github.com/gfw-breaker/mh-qikan) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧海外之窗](https://github.com/gfw-breaker/mh-news/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [神韵特别报道](https://github.com/gfw-breaker/mh-news/blob/master/shenyun.md?t=0)
 #### [ 李强、李鸿忠罕见缺席二十大前重要会议 前景不明(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016646.md)
-#### [ 台媒：对习近平威胁不大 汪洋或接班李克强(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016586.md)
 #### [ 习近平对军队不放心 二十大新军委谁上谁下？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016649.md)
+#### [ 台媒：对习近平威胁不大 汪洋或接班李克强(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016586.md)
 #### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
 #### [ 习近平意图搞终身制 不会拱手让权？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016511.md)
 #### [ 二十大前李桥铭被撤北部战区司令 或另有原因？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016563.md)
 #### [ 习近平抵达哈萨克斯坦 中亚之行要做三件事(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016677.md)
 #### [ 李克强变了？分析：低调地不透露经济实情(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016682.md)
-#### [ 俄军大溃败之际 习近平会见普京难掩尴尬(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016481.md)
 #### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
+#### [ 俄军大溃败之际 习近平会见普京难掩尴尬(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016481.md)
 #### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
 #### [ 新发言人毛宁记者会竟无人提问 网群嘲(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016487.md)
 #### [ 习近平借政治局出杀招保连任？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/653624.md)
 #### [ 亏空300亿公款 人寿保险前党委书记王滨被捕(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016595.md)
 #### [ 江峰: 李易峰被拘 北部战区诡变 因需出事反常有妖](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/653675.md)
-#### [ 贵阳要出大事？部队进驻维稳 当局封杀言论](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/653609.md)
 #### [ 广州政法委原书记谢晓丹被双开 曾称“愿公开财产”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016672.md)
+#### [ 贵阳要出大事？部队进驻维稳 当局封杀言论](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/653609.md)
 #### [ 二十大前的政治猫腻？ 李易峰被抓疑涉深层内幕](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103527703.md)
+#### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
 #### [ 新三国演义？习将面见普京 专家曝习真正目的 拜习会还好吗？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/653699.md)
 #### [ 上合峰会和普习会在即 聚焦两大阵营对垒](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13824392.md)
-#### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
-#### [ 【秦鹏直播】一路狂奔 习近平接普京指挥棒？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13824416.md)
 #### [ 准备侵台？习近平的多名亲信进中央军委](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/653813.md)
-#### [ 传广西东兴封城9个月 20万人剩3万 方舱“简直是地狱”(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1016599.md)
+#### [ 【秦鹏直播】一路狂奔 习近平接普京指挥棒？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13824416.md)
 #### [ 高盛料中共或维持清零政策至明年二会后](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13824406.md)
+#### [ 传广西东兴封城9个月 20万人剩3万 方舱“简直是地狱”(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1016599.md)
 #### [ 二十大前习近平加紧清洗政法系 震慑政敌(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016441.md)
 #### [ 二十大高层角力：汪洋女儿受聘美投行细节曝光(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016432.md)
 #### [ 网传劲爆视频：一切都被掌控，逃不出中共魔爪(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1016535.md)
 #### [ 【一线采访】新疆医护感染严重 当局瞒真相](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13823954.md)
-#### [ 二十大 习近平连任之际的内外处境(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p4/1016626.md)
-#### [ 给习近平难堪？“美限制晶元出口是霸权主义”评论亮眼](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/653606.md)
 #### [ 胡耀邦长子发文批闭关锁国论 习与红二代越走越远](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103527630.md)
+#### [ 二十大 习近平连任之际的内外处境(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p4/1016626.md)
+#### [ 习近平龙脉被挖断！就在几天前！内藏惊人数字！(视频)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/998941.md)
+#### [ 给习近平难堪？“美限制晶元出口是霸权主义”评论亮眼](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/653606.md)
 #### [ 二十大习近平将提拔四名高级将领 人选是谁？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103526645.md)
-#### [ 经济学家：中共终于正视“经济刺激”达极限](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103527258.md)
 #### [ 江西52岁村书记奸污12岁女童 引众怒](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13824316.md)
+#### [ 经济学家：中共终于正视“经济刺激”达极限](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103527258.md)
+#### [ 李克强最后一次洗牌 中共国务院将“改朝换代”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999292.md)
 #### [ 二十大临近 中共人大代表奇葩提案被骂翻](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103527812.md)
 #### [ 恒大放话全面复工 分析：二十大前政治秀](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13823864.md)
-#### [ 李克强最后一次洗牌 中共国务院将“改朝换代”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999292.md)
-#### [ 习近平龙脉被挖断！就在几天前！内藏惊人数字！(视频)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/998941.md)
 #### [ 基建狂魔已玩完 中国高铁成最大灰犀牛！(视频)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999527.md)
 #### [ 美智库：习不太可能在上合峰会上靠拢普京](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13824519.md)
+#### [ 王小洪查孙力军政治团伙 中共副总理韩正被牵出(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999389.md)
+#### [ 习近平不会在二十大改任党主席的3大理由(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016698.md)
 #### [ 传黑龙江男童勒死奶奶 现场有人拍视频](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103527304.md)
+#### [ 中共人大代表提议全面灭蚊 网民：瞎胡闹](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13824796.md)
+#### [ 二十大前封城加剧 山东即墨让公安全程介入](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13824364.md)
 #### [ 【方菲访谈】王维洛：四川限电的真实原因（下）](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13823599.md)
 #### [ 清洗江泽民堂妹的势力？福建高官陈家东落马(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999093.md)
 #### [ 两周7老虎被处理 云南政协副主席一罪行罕见](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13824682.md)
-#### [ 50岁陈慧琳晒照庆生 冻龄外表令人惊艳](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13824346.md)
+#### [ 西方机密情报：中共高官要求俄罗斯冬奥后再打乌克兰(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999481.md)
 #### [ “唐山打人案”公开审理 预计将持续数日(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1016614.md)
-#### [ 与苹果实力差距大 华为新机发布会不再提芯片](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13824548.md)
-#### [ 中秋节父母隔离期间12岁女童遭52岁村支书强奸](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/653708.md)
-#### [ 王小洪查孙力军政治团伙 中共副总理韩正被牵出(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999389.md)
-#### [ 二十大前封城加剧 山东即墨让公安全程介入](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13824364.md)
-#### [ 聚焦中俄关系 习近平普京中亚行各怀心思](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13823571.md)
+#### [ 50岁陈慧琳晒照庆生 冻龄外表令人惊艳](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13824346.md)
